--- a/jor/app/assets/stylesheets/scaffolds.css.scss
+++ b/jor/app/assets/stylesheets/scaffolds.css.scss
@@ -9,14 +9,12 @@ div {
 }
 
 .field_with_errors {
-  padding: 2px;
-  background-color: red;
-  display: table;
 }
 
 #error_explanation {
   width: 450px;
   border: 2px solid red;
+  border-radius: 5px;
   padding: 7px;
   padding-bottom: 0;
   margin-bottom: 20px;
