--- a/jor/app/views/home/index.html.erb
+++ b/jor/app/views/home/index.html.erb
@@ -1,2 +1,12 @@
-<h1>jurny</h1>
-<%= link_to "Sign up now!", signup_path %>
+<% provide(:title, 'home') %>
+<div class="hero-unit">
+  <h1>Plan your journey</h1>
+  <div class="row">
+    <div class="span4">
+      <p>Jurny will help you consider all your options for your next trip. Tell it where you want to go and how you want to get there and it will let you create a plan that satisfies your travelling desires.</p>
+      <p><%= link_to "Sign up now!", signup_path, class: "btn btn-primary btn-large" %></p>
+    </div>
+    <div class="span5"><img src="images/train_station.png"/></div>
+  </div>
+</div>
+
