- sign in functionality - updated layout for signed in users - added bootstrap javascript - added security for travellers - added admin boolean for admins - added dashboard for signed in users

--- a/jor/app/assets/stylesheets/custom.css.scss
+++ b/jor/app/assets/stylesheets/custom.css.scss
@@ -44,6 +44,12 @@ textarea {
 /* header */
 
 
+/* sidebar */
+.well-tiny {
+  border-radius: 3px 3px 3px 3px;
+  padding: 5px;
+}
+
 /* footer */
 
 footer {
