--- a/jor/app/views/layouts/_header.html.erb
+++ b/jor/app/views/layouts/_header.html.erb
@@ -4,9 +4,21 @@
       <%= link_to "jurny", root_path, class: "brand" %>
       <nav>
         <ul class="nav pull-right">
-          <li><%= link_to "Home",    root_path %></li>
-          <li><%= link_to "Help",    '#' %></li>
-          <li><%= link_to "Sign in", '#' %></li>
+          <% if signed_in? %>
+            <li><%= link_to "Home",    root_path %></li>
+            <li><%= link_to "Profile", current_user %></li>
+            <% if current_user.admin %>
+              <li class="dropdown">
+                <a data-toggle="dropdown" class="dropdown-toggle" href="#">Admin <b class="caret"></b></a>
+                <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+                  <li><%= link_to "Travellers", travellers_path %></li>
+                </ul>
+              </li>
+            <% end %>
+            <li><%= link_to "Sign out", signout_path, method: "delete" %></li>
+          <% else %>
+            <li><%= link_to "Sign in", signin_path %></li>
+          <% end %>
         </ul>
       </nav>
     </div>
