--- a/jor/app/views/travellers/_form.html.erb
+++ b/jor/app/views/travellers/_form.html.erb
@@ -1,29 +1,51 @@
-<%= form_for(@traveller) do |f| %>
-  <% if @traveller.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@traveller.errors.count, "error") %> prohibited this traveller from being saved:</h2>
-
-      <ul>
-      <% @traveller.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
+<% if @traveller.errors.any? %>
+  <div id="error_explanation">
+    <div class="alert alert-error">
+      The form contains <%= pluralize(@traveller.errors.count, "error") %>.
     </div>
-  <% end %>
+    <ul>
+    <% @traveller.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+    </ul>
+  </div>
+<% end %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.text_field :email %>
+<%= form_for(@traveller, :html => { :class => "form-horizontal"}) do |f| %>
+
+  <div class="control-group">
+    <%= f.label :email, class: "control-label" %>
+    <div class="controls">
+      <%= f.text_field :email %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :firstname %><br />
-    <%= f.text_field :firstname %>
+  <div class="control-group">
+    <%= f.label :firstname, "First Name", class: "control-label" %>
+    <div class="controls">
+      <%= f.text_field :firstname %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :lastname %><br />
-    <%= f.text_field :lastname %>
+  <div class="control-group">
+    <%= f.label :lastname, "Last Name", class: "control-label" %>
+    <div class="controls">
+      <%= f.text_field :lastname %>
+    </div>
   </div>
-  <div class="actions">
-    <%= f.submit %>
+  <div class="control-group">
+    <%= f.label :password, class: "control-label" %>
+    <div class="controls">
+      <%= f.password_field :password %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :password_confirmation, "Confirm", class: "control-label" %>
+    <div class="controls">
+      <%= f.password_field :password_confirmation %>
+    </div>
+  </div>
+  <div class="control-group">
+    <div class="controls">
+      <%= f.submit @form_action, class: "btn btn-primary" %>
+    </div>
   </div>
 <% end %>
