--- a/jor/app/views/travellers/new.html.erb
+++ b/jor/app/views/travellers/new.html.erb
@@ -1,5 +1,6 @@
+<% provide(:title, 'new traveller') %>
 <h1>New traveller</h1>
 
-<%= render 'form' %>
+<%= render 'form', :parent => 'new' %>
 
 <%= link_to 'Back', travellers_path %>
