--- a/jor/app/views/travellers/signup.html.erb
+++ b/jor/app/views/travellers/signup.html.erb
@@ -1,56 +1,6 @@
 <% provide(:title, 'sign up') %>
 <h1>Sign Up</h1>
 
-<% if @traveller.errors.any? %>
-  <div id="error_explanation">
-    <div class="alert alert-error">
-      The form contains <%= pluralize(@traveller.errors.count, "error") %>.
-    </div>
-    <ul>
-    <% @traveller.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-    </ul>
-  </div>
-<% end %>
-
-<%= form_for(@traveller, :html => { :class => "form-horizontal"}) do |f| %>
-
-  <div class="control-group">
-    <%= f.label :email, class: "control-label" %>
-    <div class="controls">
-      <%= f.text_field :email %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :firstname, "First Name", class: "control-label" %>
-    <div class="controls">
-      <%= f.text_field :firstname %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :lastname, "Last Name", class: "control-label" %>
-    <div class="controls">
-      <%= f.text_field :lastname %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :password, class: "control-label" %>
-    <div class="controls">
-      <%= f.password_field :password %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :password_confirmation, "Confirm", class: "control-label" %>
-    <div class="controls">
-      <%= f.password_field :password_confirmation %>
-    </div>
-  </div>
-  <div class="control-group">
-    <div class="controls">
-      <%= f.submit "Create account", class: "btn btn-primary" %>
-    </div>
-  </div>
-<% end %>
+<%= render 'form', :parent => 'signup' %>
 
 <%= link_to 'Back', root_path %>
