- cleaned up travellers list - more tests

--- a/jor/app/views/travellers/index.html.erb
+++ b/jor/app/views/travellers/index.html.erb
@@ -1,13 +1,11 @@
 <% provide(:title, 'travellers') %>
 <h1>Travellers</h1>
 
-<table>
+<table class="table table-striped">
   <tr>
     <th>Email</th>
     <th>Firstname</th>
     <th>Lastname</th>
-    <th></th>
-    <th></th>
     <th></th>
   </tr>
 
@@ -16,9 +14,9 @@
     <td><%= traveller.email %></td>
     <td><%= traveller.firstname %></td>
     <td><%= traveller.lastname %></td>
-    <td><%= link_to 'Show', traveller %></td>
-    <td><%= link_to 'Edit', edit_traveller_path(traveller) %></td>
-    <td><%= link_to 'Destroy', traveller, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= link_to 'Show', traveller %> |
+    <%= link_to 'Edit', edit_traveller_path(traveller) %> |
+    <%= link_to 'Destroy', traveller, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
 </table>
