--- a/jor/app/views/home/dashboard.html.erb
+++ b/jor/app/views/home/dashboard.html.erb
@@ -1,26 +1,25 @@
 <% provide(:title, 'dashboard') %>
 <div class="row">
-  <div class="span2">
-    <div class="well well-tiny">
-      <ul class="nav nav-list">
-        <li class="nav-header">Your Trips</li>
-        <li><%= link_to "Create a trip", '#' %></li>
-      </ul>
-    </div>
-  </div>
-  <div class="span10">
+  <div class="span12">
     <div class="row">
-      <div class="span3">
-        <h2>Your trips</h2>
-        <ul>
-          <li>no trips yet</li>
-        </ul>
+      <div class="span4">
+        <div class="well well-tiny">
+          <ul class="nav nav-list">
+            <li class="nav-header">Your Trips</li>
+            <% current_user.trips.each do |trip| %>
+            <li><%= link_to trip.name, trip_path(trip) %></li>
+            <% end %>
+            <li><%= link_to content_tag(:span, '', :class => 'icon-plus-sign') + 'Create a trip', new_trip_path %></li>
+          </ul>
+        </div>
       </div>
-      <div class="span3">
-        <h2>Your destinations</h2>
-        <ul>
-          <li>no destinations yet</li>
-        </ul>
+      <div class="span4">
+        <div class="well well-tiny">
+          <ul class="nav nav-list">
+            <li class="nav-header">Your Destinations</li>
+            <li>no destinations yet</li>
+          </ul>
+        </div>
       </div>
       <div class="span4"><img src="images/train_station.png"/></div>
     </div>
