--- a/jor/app/views/layouts/_header.html.erb
+++ b/jor/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
           <% if signed_in? %>
             <li><%= link_to "Home",    root_path %></li>
             <li><%= link_to "Profile", current_user %></li>
-            <% if current_user.admin %>
+            <% if current_user.admin? %>
               <li class="dropdown">
                 <a data-toggle="dropdown" class="dropdown-toggle" href="#">Admin <b class="caret"></b></a>
                 <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
