--- a/jor/app/views/travellers/edit.html.erb
+++ b/jor/app/views/travellers/edit.html.erb
@@ -1,9 +1,55 @@
 <% provide(:title, 'edit traveller') %>
 <h1>Editing traveller</h1>
 
-<%= render 'form' %>
+<% if @traveller.errors.any? %>
+  <div id="error_explanation">
+    <div class="alert alert-error">
+      The form contains <%= pluralize(@traveller.errors.count, "error") %>.
+    </div>
+    <ul>
+    <% @traveller.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+    </ul>
+  </div>
+<% end %>
+
+<%= form_for(@traveller, :html => { :class => "form-horizontal"}) do |f| %>
+
+  <div class="control-group">
+    <%= f.label :email, class: "control-label" %>
+    <div class="controls">
+      <%= f.text_field :email %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :firstname, "First Name", class: "control-label" %>
+    <div class="controls">
+      <%= f.text_field :firstname %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :lastname, "Last Name", class: "control-label" %>
+    <div class="controls">
+      <%= f.text_field :lastname %>
+    </div>
+  </div>
+  <% if signed_in? && current_user.admin? %>
+  <div class="control-group">
+    <%= f.label :admin, "Admin", class: "control-label" %>
+    <div class="controls">
+      <%= f.check_box :admin %>
+    </div>
+  </div>
+  <% end %>
+  <div class="control-group">
+    <div class="controls">
+      <%= f.submit @form_action, class: "btn btn-primary" %>
+    </div>
+  </div>
+<% end %>
 
 <%= link_to 'Profile', @traveller %>
-<% if @current_user.admin %>
+<% if @current_user.admin? %>
 | <%= link_to 'Travellers', travellers_path %>
 <% end %>
