--- a/jor/app/views/travellers/show.html.erb
+++ b/jor/app/views/travellers/show.html.erb
@@ -17,6 +17,9 @@
 
 
 <%= link_to 'Edit', edit_traveller_path(@traveller) %>
-<% if @current_user.admin %>
+<% if @traveller.id == @current_user.id || @current_user.admin? %>
+| <%= link_to 'Delete Account', @traveller, method: :delete, data: { confirm: 'Are you sure?' } %>
+<% end %>
+<% if @current_user.admin? %>
 | <%= link_to 'Travellers', travellers_path %>
 <% end %>
