- clean up json formatting in controllers - cleaned up the model - cleaned up travellers list for admins - cleaned up routes - layout of the dashboard is updated - updated trips views - updated layout header - tests

--- a/jor/app/views/travellers/edit.html.erb
+++ b/jor/app/views/travellers/edit.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'edit traveller') %>
-<h1>Editing traveller</h1>
+<h1>Editing Traveller</h1>
 
 <% if @traveller.errors.any? %>
   <div id="error_explanation">
