--- a/jor/app/views/home/dashboard.html.erb
+++ b/jor/app/views/home/dashboard.html.erb
@@ -2,7 +2,7 @@
 <div class="row">
   <div class="span12">
     <div class="row">
-      <div class="span4">
+      <div class="span3">
         <div class="well well-tiny">
           <ul class="nav nav-list">
             <li class="nav-header">Your Trips</li>
@@ -10,17 +10,18 @@
             <li><%= link_to trip.name, trip_path(trip) %></li>
             <% end %>
             <li><%= link_to content_tag(:span, '', :class => 'icon-plus-sign') + 'Create a trip', new_trip_path %></li>
+            <li class="nav-header">Your Destinations</li>
           </ul>
         </div>
       </div>
-      <div class="span4">
+      <div class="span5">
         <div class="well well-tiny">
           <ul class="nav nav-list">
             <li class="nav-header">Trip Memberships</li>
             <% current_user.trips.each do |trip| %>
             <li><%= link_to trip.name, trip_path(trip) %></li>
             <% end %>
-            <li><%= link_to content_tag(:span, '', :class => 'icon-plus-sign') + 'Join a trip', trip_add_path %></li>
+            <li><%= link_to content_tag(:span, '', :class => 'icon-plus-sign') + 'Join a trip', new_trip_membership_path %></li>
           </ul>
         </div>
       </div>
