--- a/jor/app/views/layouts/_header.html.erb
+++ b/jor/app/views/layouts/_header.html.erb
@@ -11,6 +11,7 @@
               <li class="dropdown">
                 <a data-toggle="dropdown" class="dropdown-toggle" href="#">Admin <b class="caret"></b></a>
                 <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+                  <li><%= link_to "Trips", trips_all_path %></li>
                   <li><%= link_to "Travellers", travellers_path %></li>
                 </ul>
               </li>
